<resources>
    <string name="wordsnap">WordSnap</string>
    <string name="register">Реєстрація</string>
    <string name="enter_username">Введіть ім\'я користувача</string>
    <string name="enter_email">Введіть пошту</string>
    <string name="create_password">Створіть пароль</string>
    <string name="back">Назад</string>
    <string name="login">Увійти</string>
    <string name="search">Пошук</string>
    <string name="enter_password">Введіть пароль</string>
    <string name="create_acc">Бажаєте створити акаунт?</string>
    <string name="fruits">fruits</string>
    <string name="HomePage">Домашня сторінка</string>
    <string name="SavedPage">Збережені</string>
    <string name="MinePage">Мої набори</string>
    <string name="SavedCardsets">Збережені</string>
    <string name="MyCardsets">Бібліотека</string>
    <string name="TakeTest">Тест</string>
    <string name="test_score_format">Вивчено слів:\n%1$d з %2$d</string>
    <string name="Know">Знаю</string>
    <string name="DoNotKnow">Не знаю</string>
    <string name="_1_30">1/30</string>
    <string name="WantToContinue">Бажаєте продовжити?</string>
    <string name="Yes">Так!</string>
    <string name="NoForNow">Поки ні</string>
    <string name="addCard">Додати картку</string>
    <string name="edit_cardset">Редагувати набір</string>
    <string name="delete_cardset">Видалити набір</string>
    <string name="enter_eng_word">Введіть слово англійською</string>
    <string name="enter_ua_word">Введіть слово українською</string>
    <string name="add_card">Додати картку</string>
    <string name="delete_card">Видалити картку</string>
    <string name="edit_card">Редагувати картку</string>
    <string name="enter_note">Введіть нотатку</string>
    <string name="add_to_library">Додати до збережених</string>
    <string name="remove_from_library">Видалити зі збережених</string>
    <string name="private_set">Приватна</string>
    <string name="new_score_percent_format">Новий результат: %1$.0f%%</string>
    <string name="best_score_percent_format">Найкращий результат: %1$.0f%%</string>
    <string name="log_in">Логін</string>
</resources>