<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_simple_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/buttonBackLogin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/back"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_arrow_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="28sp"
        android:textColor="#888888"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/buttonBackLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#AAAAAA"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/textViewLoginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#AAAAAA"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_background"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:paddingHorizontal="48dp"
        android:paddingVertical="12dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acc"
        android:textColor="#888888"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_background"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNoAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>