<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:paddingBottom="56dp" >

    <TextView
        android:id="@+id/textViewAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wordsnap"
        android:textSize="24sp"
        android:layout_marginTop="-7dp"
        android:fontFamily="@font/pacifico_regular"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="0dp"/>

        <LinearLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textViewCardsetTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/buttonEditSet"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/edit_cardset"
                android:src="@drawable/ic_edit"
                android:visibility="gone"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageButton
                android:id="@+id/buttonDeleteSet"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/delete_cardset"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                android:background="?attr/selectableItemBackgroundBorderless"/>
        </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerCards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/textViewCardsetTitle"
        app:layout_constraintBottom_toTopOf="@+id/buttonTakeTest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonTakeTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/TakeTest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="64dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
