<!-- app/src/main/res/layout/fragment_test_result.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="256dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textRetryPrompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/WantToContinue"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <Button
        android:id="@+id/buttonYes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Yes"
        app:layout_constraintTop_toBottomOf="@id/textRetryPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNo"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/NoForNow"
        app:layout_constraintTop_toBottomOf="@id/textRetryPrompt"
        app:layout_constraintStart_toEndOf="@id/buttonYes"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
