<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        app:layout_constraintBottom_toTopOf="@+id/buttonKnow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1">
        <TextView
            android:id="@+id/textCardWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonKnow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_background"
        android:text="@string/Know"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDontKnow"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="48dp"/>

    <Button
        android:id="@+id/buttonDontKnow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_background"
        android:text="@string/DoNotKnow"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/buttonKnow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="48dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
